# Bismarck-Bevy

./: Cargo.toml
src/: main.rs  point.rs
src/input_management/: input_manager.rs
src/map_gen/: city.rs  generate_world.rs  mod.rs  province.rs
src/pops/: add_pop.rs  mod.rs  pop.rs  pop_container.rs  pop_manager.rs
src/rendering/: convex_polygon.rs  mod.rs  ordering.rs  render_plugin.rs
src/rendering/map_views/: map_view_state.rs  mod.rs  pop_density.rs
src/scheduling/: mod.rs  startup_schedule.rs
src/world/: city.rs  edge_marker.rs  generate_world.rs  mod.rs  neighbors.rs  province.rs  triangulation.rs  world_config.rs  worldgen.rs
